--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,7 @@ knn.joblib filter=lfs diff=lfs merge=lfs -text
 *.joblib filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+models/*.joblib filter=lfs diff=lfs merge=lfs -text
+models/*.csv filter=lfs diff=lfs merge=lfs -text
+models/*.png filter=lfs diff=lfs merge=lfs -text
+models_advanced/* filter=lfs diff=lfs merge=lfs -text
